# sbi_mcmc_heat_exchanger

./: .gitattributes  .gitignore  README.md  pyproject.toml
data/: scenario_configs.csv
notebooks/: 01_model_demonstration.ipynb  02_data_generation.ipynb  03_prior_comparison.ipynb  04_multi_sample_study.ipynb  05_resource_analysis.ipynb
results/: mcmc_posteriors.npz  metrics_summary.json  sbi_posteriors.npz
src/hx_models/: __init__.py  heat_exchanger.py  inference.py  metrics.py  plotting.py  style.py
